force-app/main/default/objects/Community_Guidance_System__c/Community_Guidance_System__c.object-meta.xml
<CustomObject>
    <label>Community Guidance System</label>
    <nameField>
        <label>Community Guidance System Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Community Guidance Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>