force-app/main/default/objects/Community_Guidance_System__c/fields/is_Last_Message__c.field-meta.xml
<CustomField>
    <fullName>is_Last_Message__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is Last Message</label>
    <type>Checkbox</type>
</CustomField>