force-app/main/default/objects/Community_Guidance_System__c/fields/Main_Message__c.field-meta.xml
<CustomField>
    <fullName>Main_Message__c</fullName>
    <label>Main Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>