force-app/main/default/objects/Community_Guidance_System__c/fields/Message_No__c.field-meta.xml
<CustomField>
    <fullName>Message_No__c</fullName>
    <label>Message No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>