force-app/main/default/objects/Community_Guidance_System__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Page_Number__c</columns>
    <columns>is_First_Message__c</columns>
    <columns>is_Last_Message__c</columns>
    <columns>Title__c</columns>
    <columns>Message_No__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>